--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       var screenWidth = window.screen.width;
       var winWidth = window.innerWidth;
       var winHeight = window.innerHeight;
-      alert("Windows DPI:" + winDPI + ";\ruAgent:" + uAgent + ";\rScreen Width:" + screenWidth + ";\rScreen Height:" +
-        screenHeight + ";\rWindow Width:" + winWidth + ";\rWindow Height:" + winHeight)
+      // alert("Windows DPI:" + winDPI + ";\ruAgent:" + uAgent + ";\rScreen Width:" + screenWidth + ";\rScreen Height:" +
+      //   screenHeight + ";\rWindow Width:" + winWidth + ";\rWindow Height:" + winHeight)
     }
 
   </script>
